- added "Build" icons to Modules and Tables tabs - time saver (mamba)
- cosmetics admin area (goffy)
- fixed problems with test data (goffy)
- fixed bug with upload file/images in admin pages (goffy)
- fixed bug with save permissions in admin pages (goffy)
- fixed bugs in tpl creation (goffy)
- improved tpl creation (goffy)
- added check for upload permission to form class (goffy)
*************************************************************
THIS IS LAST VERSION WHICH CREATES MODULES WITHOUT NAMESPACES
*************************************************************

<h5>3.01 Alpha 1   [2020-01-01]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.1
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- added feedback page (mamba)
- PSR12 cosmetics (mamba)
- fixed sorting of fields (mamba)
- updated Scrutinizer config (mamba)
- added Config (mamba)
- moved icons to /images (mamba)

=================================================
2018/03/27: Version 1.91 alpha 3.6 [NOT RELEASED]
=================================================
- change from adminMenu to adminObject (mamba)
- buttons on left (mamba)
- replace static calls (mamba)
- fix statistics (mamba)
- implemented yoda in file creation (goffy)
- css corrections (goffy)
- yoda corrections (goffy)
- corrected css for templates admin tables/fields (goffy)
- replace < br /> by < br >; changed also function TDMCreateHTMLCode, TDMCreateHTMLSmartyCode (goffy)
- corrected typing errors (e.g. getVat) (goffy)
- removed unnecessary semicolons in js (goffy)
- added PHPDocs (goffy)
- replace double quote in language define by single quote; changed also function getXcTplDisplay, getDefine (goffy)
- removed unnecessary closing tag (img) (goffy)
- changed getXcLoadLanguage (include moduledir) (goffy)
- cosmetics (goffy)
- changed comparision to stict (===) (goffy)
- solved wrong string concatenate (goffy)
- Update README.md (timgno)
- fixed notification of no return value from php code inspection (goffy)